xxx, S3QL 0.11

  * fsck.s3ql no longer uses mknod(3) , since that lead to errors on e.g.
    NFS mounted volumes under Fedora. 
    
  * File access, modification and inode change times before 1972 are
    now supported.
  
  * Fixed a deadlock when removing or overwriting files.
  
2010-04-21, S3QL 0.10

  * S3QL now depends on FUSE version 2.8

  * Cached blocks are now flushed to the backend as soon as they have not
    been accessed for more than 10 seconds.

  * The setup script now automatically checks and, if necessary, installs
    the Python module dependencies.
    
  * mkfs.s3ql now creates compressed and encrypted file systems by default.

  * Data is now compressed with LZMA instead of Bzip2.
  
  * Data compression and data upload is now done in parallel, so the full network
    can bandwidth is continuously without breaks for data compression.

  * fsck.s3ql is now several orders of magnitude faster. The code has been
    optimized and some special database indices are now precalculated.

  * When running cp.s3ql, the attributes of the target directory are
    now immediately refreshed (so that e.g. ls immediately shows the
    correct number of hard links).

  * File removal is now significantly faster, since the network transactions
    are carried out asynchronously as part of the cache expiration. 
    
  * mount.s3ql no longer tries to create files with mknod(), since that
    lead to errors on NFS mounted volumes under Fedora. 
  
  * This releases includes a lot of new code, so it may be slightly
    more beta-ish than usual.
    

2010-04-04, S3QL 0.9

  * The --cachedir, --logfile, --awskey and --credfile options are gone and
    have been replaced by --homedir.

  * ~/.awssecret is no longer read, instead there is a common file with
    authentication data for all backends in ~/.s3ql/authinfo

  * The syntax for mounting S3 buckets is now s3://bucketname instead of
    just the bucket name
